# camunda-aiops

./: .dockerignore  .env.example  .gitignore  .mcp.json  .yamllint.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  config.py  knowledge_base.py  metrics.py  prompts.py  reactive_agent.py  requirements.txt  runbook_generator.py  teams_notifier.py  test-teams-notification.py  tools.py  webhook_receiver.py
alerting/: alertmanager-config-camunda.yaml  alertmanager-webhook-patch.yaml  camunda-forecasting-rules.yaml  camunda-latency-rules.yaml  camunda-storage-rules.yaml  elasticsearch-rules.yaml  kubernetes-camunda-ns-rules.yaml  kubernetes-node-rules.yaml  kubernetes-pod-rules.yaml
dashboards/: camunda-aiops-agent.json  camunda-forecasting.json
deploy/: alertmanager-values.yaml  cronjob.yaml  deployment.yaml  kustomization.yaml  pvc.yaml  secret.example.yaml  secret.yaml  service.yaml
docs/: 2026-05-20-ml-alertas-grafana-forecasting.md  README.md  analise-llm-local-desempenho.md  apresentacao-ao-time.md  como-o-agente-analisa-alertas.md  comparativo-solucoes-aiops-comunidade.md  etapa-1-prometheus-rules.md  etapa-10-observabilidade-agente.md  etapa-11-runbook-generation.md  etapa-12-rag-conhecimento.md  etapa-13-fixtures-dedup-webhook-assincrono.md  etapa-2-grafana-mcp-server.md  etapa-3-agente-reativo-claude-api.md  etapa-4-ollama-local-llm.md  etapa-6-ciclo-completo.md  etapa-7-qualidade-ci.md  etapa-8-demo-mode.md  etapa-9-system-prompt-v2.md  fix-alertmanager-helm-resiliencia.md  fix-zeebe-backpressure-investigacao.md  melhorias-pos-demo.md  persistencia-dados-agente.md  projeto-evolucao.md  revisao-A-limpeza-repositorio.md  revisao-B-hardcoded-configurabilidade.md  revisao-C-organizacao-estrutura.md  revisao-D-contributing.md  revisao-E-aiops-best-practices.md  revisao-F-alerting.md  revisao-F-grafana-migration.md  revisao-G-documentacao-final.md
docs/diagrams/: README.md  arquitetura-componentes.md  fluxo-alerta-completo.md  fluxo-webhook-assincrono.md  react-loop-agente.md
prompts/: GUIDELINES.md  system-prompt-v1.md  system-prompt-v2.md
scripts/: 01-check-metrics.sh  02-load-generator.sh  check-metrics.sh  demo.sh  deploy.sh  generate-fixtures.py  import-dashboard.sh  load-generator.sh  run-cycle-test.sh  smoke.sh  test-port-metrics.sh
tests/: test_alert_fixtures.py  test_config.py  test_reactive_agent.py  test_teams_notifier.py  test_tools.py
tests/e2e/: conftest.py  test_alert_cycle.py
tests/fixtures/: camunda-namespace-memory-pressure-alert.json  elasticsearch-cluster-health-critical-alert.json  elasticsearch-cluster-health-warning-alert.json  elasticsearch-unassigned-shards-alert.json  kube-deployment-replicas-mismatch-alert.json  kube-new-node-alert.json  kube-node-condition-affected-pods-alert.json  kube-persistent-volume-errors-alert.json  kube-pod-crash-looping-alert.json  kube-pod-high-cpu-alert.json  kube-pod-high-cpu-critical-alert.json  kube-pod-high-memory-alert.json  kube-pod-high-memory-critical-alert.json  kube-pod-multiple-restarts-alert.json  kube-pod-not-ready-alert.json  kube-pod-oom-killed-alert.json  kube-stateful-set-generation-mismatch-alert.json  kube-stateful-set-replicas-mismatch-alert.json  kube-stateful-set-update-not-rolled-out-alert.json  namespace-memory-alert.json  zeebe-backpressure-alert.json  zeebe-backpressure-growing-alert.json  zeebe-gateway-latency-high-alert.json  zeebe-memory-predicted-high-alert.json  zeebe-memory-predicted-high-resolved.json  zeebe-pvc-usage-predicted-full-alert.json  zeebe-resolved.json
tests/integration/: conftest.py  test_tools_integration.py
tests/unit/: test_alert_fixtures.py  test_config.py  test_knowledge_base.py  test_metrics.py  test_reactive_agent.py  test_runbook_generator.py  test_teams_notifier_unit.py  test_tools.py  (+1 more)
(+3 files in other folders)
