[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camunda-aiops"
version = "0.1.0"
description = "AIOps lab — forecasting preditivo e agente reativo para Kubernetes + Camunda 8"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
# Adiciona agent/ ao PYTHONPATH para que os imports internos funcionem sem refatorar
pythonpath = ["agent"]
testpaths  = ["tests"]
addopts    = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
