[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "camunda-aiops"
version = "0.12.0"
description = "AIOps lab — forecasting preditivo e agente reativo para Kubernetes + Camunda 8"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Alisson Lima" },
]
keywords = ["aiops", "camunda", "kubernetes", "llm", "ollama", "prometheus", "alerting"]
dependencies = [
    "openai>=1.30.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn>=0.32.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "prometheus-client>=0.20.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "testcontainers>=4.7.0",
    "pytest-httpserver>=1.0.0",
]

[project.urls]
Repository = "https://github.com/alisson92/camunda-aiops"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]

[tool.pytest.ini_options]
# Adiciona agent/ ao PYTHONPATH para que os imports internos funcionem sem refatorar
pythonpath = ["agent"]
testpaths  = ["tests"]
addopts    = "-v"
markers = [
    "integration: testes de integração que requerem Docker (Testcontainers)",
    "e2e: testes end-to-end do ciclo completo (Docker + servidor HTTP mock)",
]

[tool.coverage.run]
source = ["agent"]
omit = ["agent/__init__.py"]

[tool.coverage.report]
show_missing = true
# CI falha se a cobertura cair abaixo deste valor
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W: erros e avisos PEP 8
# F: erros Pyflakes (imports não usados, variáveis indefinidas, etc.)
# I: ordenação de imports (isort)
# UP: modernização de sintaxe Python (pyupgrade)
select = ["E", "W", "F", "I", "UP"]
# E501: comprimento de linha já controlado por line-length acima
ignore = ["E501"]
